--- a/vite_vue3_main/public/assets/reset_style.css
+++ b/vite_vue3_main/public/assets/reset_style.css
@@ -1,3 +1,4 @@
+html,
 body {
   height: 100%;
   margin: 0;
@@ -48,4 +49,10 @@ output {
 }
 i {
   font-style: normal;
+}
+
+#mainApp {
+  position: absolute;
+  pointer-events: none;
+  z-index: 40;
 }
